# agentic-primitives-gateway

./: .dockerignore  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  README.md  agents.json  mkdocs.yml  pyproject.toml  run.sh  versions.json
.github/workflows/: build-gateway.yml  ci.yml  docs.yml  release.yml
1.1.0/: 404.html
1.1.0/api/evaluations/: index.html
1.1.0/concepts/architecture/: index.html
1.1.0/guides/web-ui/: index.html
1.1.0/search/: search_index.json
1.1.1/: index.html
1.1.1/api/code-interpreter/: index.html
1.1.1/api/overview/: index.html
1.1.1/guides/building-tools/: index.html
1.1.2/api/agents/: index.html
1.1.2/api/llm/: index.html
1.1.2/api/memory/: index.html
1.1.2/api/policy/: index.html
1.1.2/api/teams/: index.html
1.1.2/concepts/agents/: index.html
1.1.2/concepts/streaming/: index.html
1.1.2/guides/agent-delegation/: index.html
1.1.3/api/identity/: index.html
1.1.3/api/tools/: index.html
1.1.3/concepts/teams/: index.html
1.1.3/examples/: index.html
1.1.3/getting-started/quickstart/: index.html
1.1.3/guides/memory-namespaces/: index.html
1.1.4/api/agents/: index.html
1.1.4/api/browser/: index.html
1.1.4/api/observability/: index.html
1.1.4/api/policy/: index.html
1.1.4/api/tools/: index.html
1.1.4/search/: search_index.json
1.2.0/: index.html
1.3.0/: 404.html  index.html
1.3.0/examples/: index.html
client/: README.md  pyproject.toml
client/src/agentic_primitives_gateway_client/: __init__.py  _build_info.py  auth.py  client.py  tool_builder.py
client/src/agentic_primitives_gateway_client/models/: __init__.py
client/src/agentic_primitives_gateway_client/models/llmgateway/: __init__.py  langchain.py  strands.py
client/src/agentic_primitives_gateway_client/primitives/: __init__.py  browser.py  code_interpreter.py  evaluations.py  gateway.py  identity.py  llm.py  memory.py  observability.py  policy.py  tools.py
client/tests/: conftest.py  test_client.py  test_client_coverage.py  test_client_error_handling.py  test_knowledge.py  test_langchain_model.py  test_primitives.py  test_strands_model.py
configs/: agentcore.yaml  e2e-agentcore-strands.yaml  e2e-mixed.yaml  e2e-selfhosted-langchain.yaml  kitchen-sink.yaml  local.yaml  milvus-langfuse.yaml  mixed.yaml  quickstart.yaml  selfhosted.yaml
dev/: 404.html  index.html
dev/examples/: index.html
dev/search/: search_index.json
docs/: index.md
docs/api/: agents.md  audit.md  browser.md  code-interpreter.md  evaluations.md  identity.md  knowledge.md  llm.md  memory.md  observability.md  overview.md  policy.md  teams.md  tools.md
docs/concepts/: agent-versioning.md  agents.md  architecture.md  governance.md  policy.md  primitives.md  streaming.md  team-versioning.md  teams.md
docs/examples/: index.md
docs/getting-started/: configuration.md  quickstart.md
docs/guides/: adding-a-provider.md  admin-approval.md  agent-delegation.md  building-tools.md  compliance.md  lineage.md  memory-namespaces.md  observability.md  web-ui.md
docs/providers/: mcp-gateway-registry.md
examples/: e2e_helpers.py  enforcement_demo.py
examples/a2a-client/: a2a_example.py
examples/agentcore/: README.md  with_langchain.py  with_strands.py
examples/e2e-agentcore-strands/: README.md  agent.py  requirements.txt
examples/e2e-mixed/: README.md  agent_langchain.py  agent_strands.py  requirements.txt
examples/e2e-selfhosted-langchain/: README.md  agent.py  requirements.txt
examples/langchain-auto-memory/: agent.py
examples/langchain-mcp-tools/: agent.py
examples/langchain-mem0-langfuse/: agent.py  requirements.txt
examples/langchain-milvus-langfuse/: agent.py
examples/mixed/: README.md  with_langchain.py  with_strands.py
examples/quickstart/: README.md  plain_python.py  with_curl.sh  with_langchain.py  with_strands.py
examples/selfhosted/: README.md  with_langchain.py  with_strands.py
examples/strands-agentcore/: agent.py
examples/strands-agentcore-full/: agent.py  requirements.txt
examples/strands-auto-memory/: agent.py
examples/strands-code-browser/: agent.py  requirements.txt
examples/strands-mixed-providers/: agent.py
scripts/: md2pdf.py
src/agentic_primitives_gateway/: config.py  context.py  main.py  metrics.py  middleware.py  registry.py  watcher.py
tests/: conftest.py  test_a2a_api.py  test_agent_delegation.py  test_agent_endpoints.py  test_agent_management.py  test_agent_namespace.py  test_agent_runner.py  test_agent_tool_handlers.py  test_agents.py  test_auth_middleware.py  test_auth_models.py  test_auth_noop.py  test_auth_ownership.py  test_auth_sessions.py  test_aws_context.py  test_background_runs.py  test_browser_agentcore.py  test_browser_selenium_grid.py  test_checkpoint.py  test_checkpoint_utils.py  test_code_interpreter_agentcore.py  test_code_interpreter_jupyter.py  test_config.py  test_coverage_gaps.py  test_credentials_cache.py  test_credentials_config.py  test_credentials_middleware.py  test_credentials_models.py  test_credentials_noop.py  test_credentials_status.py  test_enforcement_cedar.py  test_enforcement_middleware.py  test_enforcement_noop.py  test_evaluations_agentcore.py  test_evaluations_langfuse.py  test_event_store.py  test_exception_handlers.py  test_export.py  test_gateway_bedrock.py  test_health_extended.py  (+39 more)
tests/integration/: conftest.py  test_browser.py  test_checkpoint_redis.py  test_code_interpreter_jupyter.py  test_enforcement.py  test_evaluations.py  test_evaluations_langfuse.py  test_identity.py  test_llm_openai.py  test_memory_milvus.py  test_observability_langfuse.py  test_policy.py  test_redis_stores.py  test_tools.py  test_tools_mcp.py
tests/system/: conftest.py  test_code_interpreter.py  test_identity_entra.py  test_identity_keycloak.py  test_identity_okta.py  test_memory.py  test_memory_mem0.py  test_observability_langfuse.py  test_tools_mcp_registry.py
ui/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.json  vite.config.js  vite.config.ts
ui/src/: App.tsx  index.css  main.tsx
(+558 files in other folders)
