[build-system]
# Pinned floor: `artifacts` glob behavior (used below to conditionally
# ship the built UI in the wheel) has been stable since 1.21. Older
# hatchling versions have different semantics around artifacts vs
# force-include and could regress the Docker wheel build.
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "agentic-primitives-gateway"
version = "0.1.0"
description = "Agentic primitives gateway - unified API for agentic primitives"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.13.0,<2.14.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0",
    "prometheus-client>=0.20.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
mem0 = [
    "mem0ai>=2.0.0",
    "pymilvus>=2.4.0",
]
agentcore = [
    "bedrock-agentcore>=1.0.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp-proto-http>=1.20.0",
    "opentelemetry-sdk-extension-aws>=2.0.0",
    "aws-opentelemetry-distro>=0.10.0",
    "playwright>=1.40.0",
]
langfuse = [
    "langfuse>=3.0.0,<4.0.0",
]
keycloak = [
    "python-keycloak>=4.0.0",
]
entra = [
    "msal>=1.28.0",
]
okta = [
    "requests>=2.28.0",
]
selenium = [
    "selenium>=4.15.0",
]
jupyter = [
    "websockets>=13.0",
    "httpx>=0.27.0",
]
cedar = [
    "cedarpy>=4.0.0",
]
redis = [
    # 5.0.1 introduced async ``aclose()``; use it instead of deprecated ``close()``.
    "redis[hiredis]>=5.0.1",
]
jwt = [
    "PyJWT[crypto]>=2.8.0",
    "httpx>=0.27.0",
    "cryptography>=42.0.0",
]
knowledge-llamaindex = [
    "llama-index-core>=0.13.0,<0.15.0",
    # Embedding models — one per supported gateway embed provider.
    "llama-index-embeddings-bedrock>=0.5.0,<0.9.0",
    "llama-index-embeddings-openai>=0.3.0,<0.7.0",
    # Vector stores dispatched by LlamaIndexKnowledgeProvider._build_vector_store.
    # Upper bounds are set deliberately: these packages transitively install
    # `pydantic-core` versions that clash with the gateway's pinned `pydantic`
    # when left unbounded (e.g. weaviate-client 4.20+ pulls pydantic-core 2.46.3
    # while pydantic 2.12 strict-pins 2.46.2 → SystemError on app start).
    "llama-index-vector-stores-milvus>=1.0.0,<2.0.0",
    "llama-index-vector-stores-pinecone>=0.4.0,<1.0.0",
    "llama-index-vector-stores-postgres>=0.4.0,<1.0.0",
    "llama-index-vector-stores-weaviate>=1.1.0,<1.7.0",
    "weaviate-client>=4.9.0,<4.20.0",
]
knowledge-falkordb = [
    "llama-index-graph-stores-falkordb>=0.3.0,<0.6.0",
    "falkordb>=1.0.0,<2.0.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.9.0",
    "mypy>=1.14.0",
    "pre-commit>=4.0.0",
    "types-PyYAML>=6.0.0",
]
all = [
    "agentic-primitives-gateway[mem0,agentcore,langfuse,keycloak,entra,okta,selenium,jupyter,cedar,redis,jwt,knowledge-llamaindex,knowledge-falkordb]",
]

[tool.hatch.build.targets.wheel]
packages = ["src/agentic_primitives_gateway"]

# The compiled web UI lives at src/agentic_primitives_gateway/static/ and is
# produced by `cd ui && npm run build` (also produced inside the Docker image
# by the ui-builder stage). The directory is gitignored, so hatchling's
# default "include VCS-tracked files only" rule would skip it. Declaring the
# paths as `artifacts` tells hatchling to ship them in the wheel when they
# exist and silently skip when they don't — so `pip install -e .` works
# cleanly whether or not `npm run build` has run. At runtime `main.py`'s
# `if _STATIC_DIR.exists()` guard handles the no-UI case.
artifacts = [
    "src/agentic_primitives_gateway/static/**",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "integration: real AWS integration tests (require credentials)",
    "browser: browser automation tests (require playwright)",
]
filterwarnings = [
    "ignore::RuntimeWarning:asyncio",
    "ignore:coroutine.*was never awaited:RuntimeWarning",
]

[tool.ruff]
target-version = "py313"
line-length = 120
src = ["src", "client/src", "tests", "client/tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",  # line-too-long (formatter handles code; decorative comments are fine)
]

[tool.ruff.lint.isort]
known-first-party = ["agentic_primitives_gateway", "agentic_primitives_gateway_client"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = false
mypy_path = "src:client/src"
packages = ["agentic_primitives_gateway", "agentic_primitives_gateway_client"]

[[tool.mypy.overrides]]
module = [
    "mem0.*",
    "bedrock_agentcore.*",
    "opentelemetry.*",
    "playwright.*",
    "langfuse.*",
    "boto3.*",
    "botocore.*",
    "amazon.*",
    "selenium.*",
    "websockets.*",
    "cedarpy.*",
    "jwt.*",
    "keycloak.*",
    "msal.*",
    "requests.*",
    "redis.*",
    "strands.*",
    "langchain_core.*",
    "llama_index.*",
    "falkordb.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "agentic_primitives_gateway.routes._background",
    "agentic_primitives_gateway.primitives.tasks.redis",
    "agentic_primitives_gateway.agents.session_registry",
]
disable_error_code = ["misc"]

[[tool.mypy.overrides]]
module = [
    "agentic_primitives_gateway.primitives.evaluations.langfuse",
]
disable_error_code = ["no-any-return", "call-arg"]
