[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentic-primitives-gateway-client"
version = "0.1.0"
description = "Python client for the Agentic Primitives Gateway API"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.27.0",
]

[project.optional-dependencies]
aws = [
    "boto3>=1.26.0",
]
langchain = [
    "langchain-core>=0.3.0",
]
strands = [
    "strands-agents>=0.1.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "boto3>=1.26.0",
    "langchain-core>=0.3.0",
    "strands-agents>=0.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/agentic_primitives_gateway_client"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
